--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.3",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
-    "reactjs-popup": "^2.0.6"
+    "reactjs-popup": "^2.0.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
